# SPAsm

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  build.bat  build.sh  spasmConfig.cmake.in
aarch64/: CMakeLists.txt  aarch64.instructions  generate.py
cmake/: target_options.cmake  utils.cmake
include/spasm/: abi.h  algorithms.h  args_count.h  assembler.h  bytecode.h  common.h  data.h  error.h  instruction.h  jit.h  obj.h  operand.h  parser.h  platform.h  register.h  x86_64.h
include/spasm/windows/: coff.h
src/: CMakeLists.txt  aarch64.c  abi.c  assembler.c  bytecode.c  data.c  dll_main.c  instruction.c  jit.c  linux_x64.c  obj.c  parser.c  platform.c  register.c  windows_x64.c  x86_64.c
src/windows/: coff.c
tests/: CMakeLists.txt
tests/x86_64/: CMakeLists.txt  hello_world_linux_x64.asm  test_hello_world_linux_x64.c
tests/x86_64/encoding/: CMakeLists.txt  test_add.c  test_encoding_common.h  test_mov.c  test_movaps.c  test_syscall.c
tests/x86_64/linux/: test_hello_world_linux_x64.c
tests/x86_64/windows/: test_hello_world_windows_x64.asm
tests/x86_64/windows/coff/: test_windows_x64_coff_gen.c
x86_64/: CMakeLists.txt  generate.py  scrap_pdf.py  scrap_table.py  x86_64.instructions  x86_64_instructions.c
